--- a/views/index.jade
+++ b/views/index.jade
@@ -31,19 +31,21 @@ block body
           p.bold Contact
           p To acquire more information, please contact Alyssa at 
             a(href="mailto:dancingtailstraining@gmail.com").ease dancingtailstraining@gmail.com
+            |  or call 
+            a(href="tel:1-805-302-4691").ease (805) 302-4691
             | .
         aside
           p.bold Location
           p We are located in Berkeley, California, and we are currently serving the East Bay.
       div.grid-third
-        img#ppg(src="PPG.png")
+        a(href="http://www.petprofessionalguild.com/", target="_blank"): img#ppg(src="PPG.png")
       div.grid-third
         ul
           li: a(href='/').ease Home
           li: a(href='videos').ease Videos
         ul
           li: a(href='/services').ease Services
-          li: a(href='/Philosophy').ease Philosophy
+          li: a(href='/philosophy').ease Philosophy
         ul
           li: a(href='/about').ease About
           li: a(href='/contact').ease Contact
