--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(ng-app="myApp")
   head
 
     meta(charset='utf8')
-    meta(name="viewport",content="width=device-width,initial-scale=1.0,user-scalable=yes")
+    meta(name="viewport",content="width=device-width,initial-scale=1.0,user-scalable=no")
     base(href='/')
     title Dancing Tails Dog Training
     link(rel="icon", type="image/png", href="../favicon.ico")
