a few elements updated

--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -40,6 +40,7 @@ section.container#bio
 			div.portraitRight
 				div.panel
 					img(src="CalypsoTraining-low.jpg",style="max-width:100%")
+					p.smallest Heifer Halter Training class, Cal Poly
 			p Animals have always been a passion of mine. As a child, my parents simply couldn’t keep me away from animals. Growing up I had birds, fish, a snake, pet rats, and hermit crabs...all in our cozy little apartment! We weren’t able to have a pet dog in the apartment, so I spent plenty of time playing with and caring for my older siblings’ dogs: a husky named Zeus, an Alaskan Malamute named Mara, and chihuahuas named Tillie and Suzie. I think it’s safe to say that my passion for animals has continued to this day...
 			div.portraitLeft(style="float:left;margin-right:30px")
 				div.panel
