--- a/views/partials/services.jade
+++ b/views/partials/services.jade
@@ -1,7 +1,7 @@
 section.container#services2
 	div.panelContainer(style="background-image:url('services-low.jpg')")
-		div.serviceIntro.whiteStroke
-			h1 I am Here to Help!
+		div.serviceIntro
+			h1.green I am Here to Help!
 			h2 Each Private consult includes:
 			ul
 				li A pre-consult phone call
