--- a/public/css/main.css
+++ b/public/css/main.css
@@ -849,13 +849,13 @@ footer .credit{
 }
 #services2 .panelContainer .serviceIntro:after{
   position:absolute;
-  background: #1BA39C;
+  background: #ddd;
   content:"";
   width:100%;
   height:100%;
   top:0;
   left:0;
-  opacity:0.2;
+  opacity:0.7;
   z-index:-1;
 /*  -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
