--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -47,7 +47,7 @@ section.container#bio
 					img(src="Bermuda-low.jpg",style="max-width:100%")
 					p.smallest Dolphin Quest in Bermuda
 			p The summer before I left home for college I worked as a veterinary technician, which was a great experience, but I left knowing that veterinary work was not right for me. Then, I headed off to Cal Poly, San Luis Obispo in pursuit of an Animal Science degree. As it turns out, this degree had little to do with dogs and other household pets; but, I learned all about the anatomy, physiology, and production of livestock animals such as chickens, cows, pigs, and sheep. In order to get my dog fix, I volunteered as an advanced canine handler at Woods Humane in San Luis Obispo, where I worked on basic training techniques and spent quality time with homeless dogs in need of some love. After my second year at Cal Poly I even had the opportunity to spend a summer in Bermuda training dolphins for Dolphin Quest, which (as you can imagine) was a pretty incredible experience! But after I graduated from Cal Poly, I once again found myself knowing more about what I did not want to do, as opposed to what I did want to do: Working with livestock and training dolphins just didn’t fit the bill.
-			div.portraitRight(style="margin-left:30px")
+			div.portraitRight(style="float:right;margin-left:30px")
 				div.panel
 					img(src="Zebra-low.jpg",style="max-width:100%")
 					p.smallest Bottle Feeding a Zebra
