typos fixed - Rob

--- a/views/partials/services.jade
+++ b/views/partials/services.jade
@@ -61,5 +61,5 @@ section.pageEnd
 	figure.banner#servicesEnd(style="background-image:url('../Maysie4-standard.jpg')").bg
 		div
 			h1 Have Questions | Want More Details?
-			p.small Reach out to me & start training your pooch today
+			p.small Reach out to me and start training your pooch today
 			a(href="/contact"): button.ease Contact Me
