--- a/views/partials/messages.jade
+++ b/views/partials/messages.jade
@@ -1,12 +1,12 @@
 section.container(style="position:fixed;padding-top:60px;left:50%;-webkit-transform: translate(-50%, 0%);-moz-transform: translate(-50%, 0%);-ms-transform: translate(-50%, 0%);-o-transform: translate(-50%, 0%);")
 	div.grid-half
 		input.ease(ng-model="search",placeholder="Search")
-	div.grid-half
+	div.grid-half(style="margin-bottom:0")
 		div.grid-half
 			div(ng-click="viewAll()", style="cursor:pointer;display:inline-block") 
 				p(ng-show="all").green All
 				p(ng-hide="all") All
-		div.grid-half
+		div.grid-half(style="margin-bottom:0")
 			div(ng-click="viewStarred()", style="cursor:pointer;display:inline-block")
 				p(ng-show="starred").green Starred
 				p(ng-hide="starred") Starred
