page loading icon added

--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -1,3 +1,5 @@
+div(show-during-resolve).loadingLayer.ease
+	h1: i
 section.splash(style="background-image:url('../contact-low.jpg')").bg
 	div(style="left:25%").ease.hideBottom
 		h1(style="font-size:3em") Contact Me
