--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,3 +1,5 @@
+div(show-during-resolve).loadingLayer.ease
+	h1: i
 section#homeCover.splash.bg(style="background-image:url('../homeCover-low.jpg')")
 	figure#homeLogo
 		img(src="logoText-low.png")#logoText
