--- a/views/partials/videos.jade
+++ b/views/partials/videos.jade
@@ -1,3 +1,5 @@
+div(show-during-resolve).loadingLayer.ease
+	h1: i
 section#playerLayer.invisible.ease(ng-click="closeVideo()")
 	div.container.playerContainer
 		div#player
