--- a/public/css/main.css
+++ b/public/css/main.css
@@ -284,8 +284,14 @@ footer .grid-third:last-child{
   top:0 !important;
 }
 .hide{
-  bottom:-100px !important;
+  z-index:-100 !important;
+  opacity:0 !important;
 }
+.show{
+  z-index:101 !important;
+  opacity: 1 !important
+}
+
 .whiteStroke{
   text-shadow: 1px 1px 0 #fff,
                 -1px 1px 0 #fff,
@@ -323,6 +329,46 @@ footer .grid-third:last-child{
    -moz-box-shadow:    inset 0 0 10px #000000;
    -webkit-box-shadow: inset 0 0 10px #000000;
    box-shadow:         inset 0 0 10px #000000;
+}
+@-webkit-keyframes webkit-spin {
+  from {
+    -webkit-transform: scale(1) rorate(0deg);
+  }
+  to {
+    -webkit-transform: scale(1) rotate(359deg);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.loading-icon {
+  -o-animation: spin .7s infinite linear;
+  -ms-animation: spin .7s infinite linear;
+  -moz-animation: spin .7s infinite linear;
+  -webkit-animation: webkit-spin .7s infinite linear;
+}
+.loadingLayer h1 {
+  position:absolute;
+  left:50%;
+  top:20%;
+  color:#1BA39C;
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -ms-transform: translate(-50%, 0%);
+  -o-transform: translate(-50%, 0%);
+}
+.loadingLayer{
+  position:absolute;
+  width:100%;
+  height:100%;
+  z-index:101;
+  background:white;
+  opacity:0.7;
 }
 /*
  *  Header & Footer
