--- a/views/partials/services.jade
+++ b/views/partials/services.jade
@@ -1,3 +1,5 @@
+div(show-during-resolve).loadingLayer.ease
+	h1: i
 section.container#services2
 	div.panelContainer(style="background-image:url('services-low.jpg')")
 		div.serviceIntro
