--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -29,12 +29,12 @@ section.container#philosophy
 			p Out of the four ways to increase or decrease behavior, I only use two: positive reinforcement and negative punishment. Both are humane training techniques, resulting in dancing tails and a strong bond between dog and handler.
 			ul
 				li 
-					span.bold Positive Reinforcement 
-					| increases a behavior due to the presentation of a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will happen if I…”
+					span.bold Positive Reinforcement: 
+					| adding something good to increase a behavior
 					ul: li For example, I ask Charlie to sit, he sits, and then he gets his favorite treat.
 				li 
-					span.bold Negative Punishment 
-					| decreases a behavior by removing a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will stop if I…”
+					span.bold Negative Punishment: 
+					| delaying something good to decrease a behavior
 					ul: li For example, Lola plays too rough, so I walk away.
 		div.panel
 			img(src="operantConditioning.jpg")
