--- a/views/index.jade
+++ b/views/index.jade
@@ -50,11 +50,11 @@ block body
           li: a(href='/about').ease About
           li: a(href='/contact').ease Contact
         div.socialMedia
-          p: a(href="https://www.facebook.com/dancingtailsdogtraining", target="_blank").ease
-            i.fa.fa-facebook-official
-          p: a(href="https://instagram.com/dancingtails", target="_blank").ease
+          p: a(href="https://www.facebook.com/dancingtailsdogtraining", target="_blank").ease#facebookIcon
+            i.fa.fa-facebook-square
+          p: a(href="https://instagram.com/dancingtails", target="_blank").ease#instagramIcon
             i.fa.fa-instagram
-          p: a(href="https://www.youtube.com/channel/UCsM9t3PX5wriPBHigH9intw/videos", target="_blank").ease
+          p: a(href="https://www.youtube.com/channel/UCsM9t3PX5wriPBHigH9intw/videos", target="_blank").ease#youtubeIcon
             i.fa.fa-youtube-square
         div.credit
           p Handcrafted in San Francisco, California.
