--- a/views/partials/services.jade
+++ b/views/partials/services.jade
@@ -1,6 +1,6 @@
 div(show-during-resolve).loadingLayer.ease
 	h1: i
-section.container#services2
+section.container#services
 	div.panelContainer(style="background-image:url('services-low.jpg')")
 		div.serviceIntro
 			h1.green I am Here to Help!
@@ -45,7 +45,7 @@ section.container#services2
 			div.grid-third
 				div.panel(ng-click="showProgram(2)",style="background-image:url('../Biggie1-low.jpg')").bg.ease
 					h1 Behavior
-	div.policy
+	div#policy
 		div.grid-half
 			p.small.bold.green Payment
 			p.smallest Payment for all services can be made at the time of your scheduled appointment. I take cash and checks only.
