--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -54,19 +54,19 @@ section.container
 				h2 Books
 			div.panel.list
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Pitcairns-Complete-Guide-Natural-Health/dp/157954973X/ref=sr_1_1?s=books&ie=UTF8&qid=1424997405&sr=1-1&keywords=dr.+pitcairns+complete+guide") Dr. Pitcairn's Complete Guide to Natural Health for Dogs & Cats
+					p: a.bold(href="http://www.amazon.com/Pitcairns-Complete-Guide-Natural-Health/dp/157954973X/ref=sr_1_1?s=books&ie=UTF8&qid=1424997405&sr=1-1&keywords=dr.+pitcairns+complete+guide", target="_blank") Dr. Pitcairn's Complete Guide to Natural Health for Dogs & Cats
 					p Dr. Richard Pitcairn
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Dont-Shoot-Dog-Teaching-Training/dp/0553380397/ref=sr_1_2?s=books&ie=UTF8&qid=1424997672&sr=1-2&keywords=don%27t+shoot+the+dog+karen+pryor") Don't Shoot the Dog! The New Art of Teaching and Training
+					p: a.bold(href="http://www.amazon.com/Dont-Shoot-Dog-Teaching-Training/dp/0553380397/ref=sr_1_2?s=books&ie=UTF8&qid=1424997672&sr=1-2&keywords=don%27t+shoot+the+dog+karen+pryor", target="_blank") Don't Shoot the Dog! The New Art of Teaching and Training
 					p Karen Pryor
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Inside-Dog-What-Dogs-Smell/dp/1416583432/ref=sr_1_1?s=books&ie=UTF8&qid=1425011239&sr=1-1&keywords=inside+of+a+dog+by+alexandra+horowitz") Inside of a Dog: What Dogs See, Smell, and Know
+					p: a.bold(href="http://www.amazon.com/Inside-Dog-What-Dogs-Smell/dp/1416583432/ref=sr_1_1?s=books&ie=UTF8&qid=1425011239&sr=1-1&keywords=inside+of+a+dog+by+alexandra+horowitz",target="_blank") Inside of a Dog: What Dogs See, Smell, and Know
 					p Alexandra Horowitz
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Raising-Behaviorally-Healthy-Puppy-parenting/dp/0974954241/ref=sr_1_1?s=books&ie=UTF8&qid=1425011509&sr=1-1&keywords=A+Pet+Parenting+Guide") Raising A Behaviorally Healthy Puppy: A Pet Parenting Guide
+					p: a.bold(href="http://www.amazon.com/Raising-Behaviorally-Healthy-Puppy-parenting/dp/0974954241/ref=sr_1_1?s=books&ie=UTF8&qid=1425011509&sr=1-1&keywords=A+Pet+Parenting+Guide",target="_blank") Raising A Behaviorally Healthy Puppy: A Pet Parenting Guide
 					p Dr. Suzanne Hetts
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Power-Positive-Dog-Training/dp/0470241845/ref=sr_1_1?s=books&ie=UTF8&qid=1425011684&sr=1-1&keywords=The+Power+of+Positive+Dog+Training") The Power of Positive Dog Training
+					p: a.bold(href="http://www.amazon.com/Power-Positive-Dog-Training/dp/0470241845/ref=sr_1_1?s=books&ie=UTF8&qid=1425011684&sr=1-1&keywords=The+Power+of+Positive+Dog+Training",target="_blank") The Power of Positive Dog Training
 					p Pat Miller
 
 	div.grid-half
@@ -75,10 +75,10 @@ section.container
 				h2 Websites and Blogs
 			div.panel.list
 				div.listItem
-					p: a.bold(href="http://www.yourpitbullandyou.com/") Your Pit Bulls and You
+					p: a.bold(href="http://www.yourpitbullandyou.com/",target="_blank") Your Pit Bulls and You
 					p www.yourpitbullandyou.com
 				div.listItem
-					p: a.bold(href="http://www.patriciamcconnell.com/theotherendoftheleash/") The Other End of the Leash
+					p: a.bold(href="http://www.patriciamcconnell.com/theotherendoftheleash/",target="_blank") The Other End of the Leash
 					p www.patriciamcconnell.com /theotherendoftheleash
 section.pageEnd
 	figure.banner#philosophyEnd(style="background-image:url('../Hubert2-standard.jpg')").bg
