--- a/views/partials/messages.jade
+++ b/views/partials/messages.jade
@@ -1,4 +1,5 @@
 section.container(style="position:fixed;padding-top:60px;left:50%;-webkit-transform: translate(-50%, 0%);-moz-transform: translate(-50%, 0%);-ms-transform: translate(-50%, 0%);-o-transform: translate(-50%, 0%);background:#f5f5f5;z-index:99;")
+	p.smallest(ng-click="logout()" style="position:absolute;top:50%;right:0;cursor:pointer") Sign Out
 	div.grid-half
 		input.ease(ng-model="search",placeholder="Search")
 	div.grid-half(style="margin-bottom:0")
@@ -12,7 +13,7 @@ section.container(style="position:fixed;padding-top:60px;left:50%;-webkit-transf
 				p(ng-hide="starred") Starred
 section.container(style="padding-top:150px")
 	div.panelContainer(ng-repeat="(i, message) in messages | filter:search | orderBy:'-date.full'", id="{{message._id}}", style="border:solid;text-align:left")
-		div.panel				
+		div.panel
 			div(style="display:inline-block;cursor:pointer",ng-click="show=!show")
 				p.bold(ng-hide="show") {{message.date.date}} 
 					span.small at {{message.date.time}}
